metadata/force-app/main/default/objects/CustomName_KbIcd__c/CustomName_KbIcd__c.object-meta.xml
<CustomObject>
    <description>Description_OqdZw</description>
    <label>CustomLabel_MXaJi</label>
    <nameField>
        <label>CustomLabel_MXaJi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MXaJis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>