metadata/force-app/main/default/objects/CustomName_KbIcd__c/fields/CustomField_JZwUL__c.field-meta.xml
<CustomField>
    <fullName>CustomField_JZwUL__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldlEhoZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>