metadata/force-app/main/default/objects/CustomName_KbIcd__c/fields/CustomField_tcLng__c.field-meta.xml
<CustomField>
    <fullName>CustomField_tcLng__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldApeWk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>